--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ platformdirs==2.5.2
 pydantic==1.9.1
 pyparsing==3.0.9
 python-dotenv==0.20.0
+pytz==2022.2.1
 requests==2.28.1
 requests-oauthlib==1.3.1
 SQLAlchemy==1.4.39
